--- a/VLDBJ/ACQ.bib
+++ b/VLDBJ/ACQ.bib
@@ -349,7 +349,7 @@
 
 @inproceedings{mislove-2008-flickr,
   author = {Alan Mislove and Hema Swetha Koppula and Krishna P. Gummadi and Peter Druschel and Bobby Bhattacharjee},
-  title = {Growth of the Flickr Social Network}, 
+  title = {Growth of the Flickr Social Network},
   booktitle = {Proceedings of the 1st ACM SIGCOMM Workshop on Social Networks (WOSN'08)},
   location = {Seattle, WA},
   month = {August},
@@ -362,4 +362,31 @@
   school = {Rice University, Department of Computer Science},
   year = {2009},
   month = {May}
+}
+
+@article{fangeffective,
+  title={Effective Community Search over Large Spatial Graphs},
+  author={Fang, Yixiang and Cheng, Reynold and Li, Xiaodong and Luo, Siqiang and Hu, Jiafeng}
+  booktitle = {PVLDB},
+  year = {2016}
+}
+
+@inproceedings{mislove-2008-flickr,
+  author = {Alan Mislove and Hema Swetha Koppula and Krishna P. Gummadi and Peter Druschel and Bobby Bhattacharjee},
+  title = {Growth of the Flickr Social Network},
+  booktitle = {Proceedings of the 1st ACM SIGCOMM Workshop on Social Networks (WOSN'08)},
+  location = {Seattle, WA},
+  month = {August},
+  year = {2008}
+}
+
+@article{sariyuce2016incremental,
+  title={Incremental k-core decomposition: algorithms and evaluation},
+  author={Sar{\i}y{\"u}ce, Ahmet Erdem and Gedik, Bu{\u{g}}ra and Jacques-Silva, Gabriela and Wu, Kun-Lung and {\c{C}}ataly{\"u}rek, {\"U}mit V},
+  journal={The VLDB Journal},
+  volume={25},
+  number={3},
+  pages={425--447},
+  year={2016},
+  publisher={Springer}
 }
