--- a/VLDBJ/ACQ.bib
+++ b/VLDBJ/ACQ.bib
@@ -390,3 +390,34 @@
   year={2016},
   publisher={Springer}
 }
+
+@article{huang2015approximate,
+  title={Approximate closest community search in networks},
+  author={Huang, Xin and Lakshmanan, Laks VS and Yu, Jeffrey Xu and Cheng, Hong},
+  journal={Proceedings of the VLDB Endowment},
+  volume={9},
+  number={4},
+  pages={276--287},
+  year={2015},
+  publisher={VLDB Endowment}
+}
+
+@article{barbieri2015efficient,
+  title={Efficient and effective community search},
+  author={Barbieri, Nicola and Bonchi, Francesco and Galimberti, Edoardo and Gullo, Francesco},
+  journal={Data Mining and Knowledge Discovery},
+  volume={29},
+  number={5},
+  pages={1406--1433},
+  year={2015},
+  publisher={Springer}
+}
+
+@inproceedings{yang2013community,
+  title={Community detection in networks with node attributes},
+  author={Yang, Jaewon and McAuley, Julian and Leskovec, Jure},
+  booktitle={Data Mining (ICDM), 2013 IEEE 13th international conference on},
+  pages={1151--1156},
+  year={2013},
+  organization={IEEE}
+}
