--- a/VLDBJ/app-auf.tex
+++ b/VLDBJ/app-auf.tex
@@ -10,9 +10,8 @@ the four functions of the anchored union-find (AUF) data structure.
 \algrenewcommand{\algorithmiccomment}[1]{\hskip3em$//$ #1}
 \begin{algorithmic}[1]
     \Function{makeSet($x$)}{}
-        \State $x.parent\gets x$;
+        \State $x.parent, x.anchor\gets x$;
         \State $x.rank\gets 0$;
-        \State $x.anchor\gets x$;
     \EndFunction
     \Function{find($x$)}{}
         \If {$x.parent$=$x$}
@@ -47,16 +46,16 @@ the four functions of the anchored union-find (AUF) data structure.
 The functions \textsc{find} and \textsc{union} are exactly the same
 as that of the classical union-find data structure~\cite{unionFind}.
 For function \textsc{makeSet}, the only change made on the classical \textsc{makeSet}
-is that, it adds a line of code for initializing $x.anchor$ as $x$ (line 4).
+is that, it initializes $x.anchor$ as $x$ (line 2).
 The function \textsc{updateAnchor} is used to update the anchor vertex of $x$'s representative vertex.
-It first finds $x$'s representative vertex by calling \textsc{find} (line 21).
+It first finds $x$'s representative vertex by calling \textsc{find} (line 20).
 Then, if the core number of $x$' representative vertex is larger than that of the current input vertex $y$,
 it updates the anchor vertex of $x$'s representative vertex as $y$.
 
 \textbf{Complexity analysis.}
 The time complexities of functions \textsc{find} and \textsc{union} are $O(\alpha(n))$~\cite{unionFind},
 where $\alpha(n)$ is less than 5 for all practical values of $n$.
-In function \textsc{makeSet}, since initializing $x.anchor$ can be done in $O(1)$,
+In function \textsc{makeSet}, 
 the time complexity of \textsc{makeSet} is still $O(1)$.
 In function \textsc{updateAnchor}, as \textsc{find} can be completed in $O(\alpha(n))$
 and updating anchor can be completed in $O(1)$,
