--- a/VLDBJ/efficiency.tex
+++ b/VLDBJ/efficiency.tex
@@ -261,17 +261,17 @@ In addition, we also run the CD method {\tt CODICIL}, which takes 32 mins, 2 min
 \textbf{2. Index Maintenance.}
 We first evaluate the performance of keyword update and the results show that the keyword update is very fast. For example, inserting and deleting a keyword are around $10^6$ times faster than rebuilding the index.
 Next, we show the performance of edge update on four static datasets in Figures~\ref{fig:exp-indexMaintenance}(a)-\ref{fig:exp-indexMaintenance}(h) by varying $k$.
-In Figures~\ref{fig:exp-indexMaintenance}(a)-\ref{fig:exp-indexMaintenance}(b), we report the efficiency by separately performing edge insertion and deletion. Clearly, {\tt insertEdge} is $10^2$ to $10^5$ times faster than rebuilding index,
+In Figures~\ref{fig:exp-indexMaintenance}(a)-\ref{fig:exp-indexMaintenance}(b), we report the efficiency by separately performing edge insertion and deletion. Clearly, {\tt insertEdge} is $10^2$ to $10^5$ times faster than rebuilding the index,
 and {\tt deleteEdge} is also around $10^2$ times faster than rebuilding index.
 The main reason is that, inserting or deleting one edge only affects a small proportion of CL-tree nodes and their connectivity.
 In other words, most of the nodes remain unaffected.
 Moreover, {\tt deleteEdge} is slower than {\tt insertEdge}. This is because, splitting tree nodes generally involves more computational cost than merging tree nodes.
 In addition, we put all the insertion and deletion edges together, and report the efficiency by performing insertion and deletion for these edge with a random order. We report the results in Figures~\ref{fig:exp-indexMaintenance}(c)-\ref{fig:exp-indexMaintenance}(d),
-where ``update" denote our algorithms including both {\tt insertEdge} and {\tt deleteEdge}.
+where ``update" denotes our algorithms including both {\tt insertEdge} and {\tt deleteEdge}.
 We can see that, the index update algorithm is still much faster than rebuilding the index.
 
 The results on real dynamic graphs (DFlickr and Youtube datasets) are shown in Figures~\ref{fig:exp-indexMaintenance}(i)-\ref{fig:exp-indexMaintenance}(j).
-It is easy to observe that, the results on real dynamic graphs are similar to those on static graphs.
+It is obvious to observe that, the results on real dynamic graphs are similar to those on static graphs.
 In summary, our proposed index maintenance algorithms are much faster than rebuilding the index from scratch.
 
 %We can observe that the index maintenance algorithms are always much more efficient than rebuilding the CL-tree. In four static datasets, the curves of four real datasets are slightly different as the core number increases. For the edge insertion case, as shown in the Figure~\ref{fig:exp-indexMaintenance}(a)-\ref{fig:exp-indexMaintenance}(d), dynamically updating the tree index is $10^2$ to $10^5$ times faster than rebuilding the CL-tree. Note that our algorithms follows two main steps: (1) Compute vertices which may increase (decrease) the core numbers; (2) Update the tree index. And the reason for the phenomenon that it takes more time to as the core number increases, as shown in BDLP Figure~\ref{fig:exp-indexMaintenance}(b), is that the number of vertices whose core numbers range from 10 to 20 is relatively larger than others. As a result of that, we need to recursively compute the vertices which may increase the core numbers and, if necessary, update corresponding subtrees afterwards.
