--- a/VLDBJ/problem.tex
+++ b/VLDBJ/problem.tex
@@ -12,17 +12,17 @@ We also suppose that an attributed graph $G(V,E)$ is undirected, with vertex set
      \hline
           {\bf Symbol} & {\bf Meaning}\\
      \hline\hline
-          $G(V,E)$       & An attributed graph with vertex set $V$ and edge set $E$\\ %($n$=$|V|$, $m$=$E$)
+          $G(V,E)$       & A graph with vertex set $V$ and edge set $E$\\ %($n$=$|V|$, $m$=$E$)
      \hline
           $W(v)$         & The keyword set of vertex $v$\\
      \hline
           $deg_G(v)$     & The degree of vertex $v$ in $G$\\
      \hline
-          $G[S']$        & \tabincell{l}{The largest connected subgraph of $G$ s.t. $q\in G[S']$,\\
-                           and $\forall v\in G[S']$, $S'\subseteq W(v)$}\\
+          $G[S']$        & \tabincell{l}{The largest connected subgraph of $G$ s.t. $q$$\in$$G[S']$\\
+                            and $\forall$$v$$\in$$G[S']$, $S'$$\subseteq$$W(v)$}\\
      \hline
-          $G_k[S']$      & \tabincell{l}{The largest connected subgraph of $G$ s.t. $q\in G_k[S']$,\\
-                           and $\forall v\in G_k[S']$, $deg_{G_k[S']}v\geq k$ and $S'\subseteq W(v)$}\\
+          $G_k[S']$      & \tabincell{l}{The largest connected subgraph of $G$ s.t. $q$$\in$$G_k[S']$\\
+                           and $\forall$$v$$\in$$G_k[S']$, $deg_{G_k[S']}v\geq k$ and $S'$$\subseteq$$W(v)$}\\
      \hline
   \end{tabular}
 \end{table}
