--- a/VLDBJ/experiment.tex
+++ b/VLDBJ/experiment.tex
@@ -1,7 +1,7 @@
 \section{Experiments}
 \label{experiment}
 
-We now present the experimental results. Section~\ref{setup} discusses the setup. We discuss the results in Sections~\ref{effectiveness} and \ref{efficiency}.
+We now present the experimental results. Section~\ref{setup} discusses the setup. We discuss the effectiveness and efficiency results in Sections~\ref{effectiveness} and \ref{efficiency} respectively.
 
 \input{setup}
 
