--- a/VLDBJ/setup.tex
+++ b/VLDBJ/setup.tex
@@ -9,12 +9,14 @@ In the {\it Tencent} graph provided by the KDD contest 2012~\footnote{\url{http:
 Table~\ref{tab:dataset} shows the number of vertices and edges, the $k_{max}$ value, a vertex's average degree $\widehat d$, and its keyword set size $\widehat l$.
 
 {\color{blue}
-The remaining two datasets (DFlickr and Youtube~\cite{mislove-2009-socialnetworksthesis,mislove-2008-flickr}) are dynamic evolving graphs, which contain the snapshots of graphs as the time goes on.
+The remaining two datasets,
+i.e., {\it DFlickr} and {\it Youtube}~\cite{mislove-2009-socialnetworksthesis,mislove-2008-flickr}),
+are dynamic evolving graphs, which contain the snapshots of graphs as the time goes on.
 Note that these two datasets do not have keywords.
-DFlickr and Youtube datasets are about the user friendship networks on Flickr and Youtube websites respectively.
-Each vertex denotes a user and each edge denotes a friendship.
-In DFlickr, there are many edges are inserted and deleted during the evolving process.
-In Youtude, there are only inserted edges as the time goes on.
+Both DFlickr and Youtube datasets are about the user friendship networks on Flickr and Youtube websites respectively.
+Each vertex denotes a user and each edge denotes a friendship between two users.
+DFlickr contains edges which are inserted and deleted during the evolving process;
+while in Youtude, there are only inserted edges as the time goes on.
 }
 
 \begin{table}[h]
@@ -29,17 +31,17 @@ In Youtude, there are only inserted edges as the time goes on.
                          & \textbf{\emph{{$\widehat d$}}}
                          & \textbf{\emph{{$\widehat l$}}}\\
      \hline\hline
-          \emph{Flickr}         &  581,099      &  9,944,548   &   152   & 17.1   &  9.90 \\
+          Flickr         &  581,099      &  9,944,548   &   152   & 17.1   &  9.90 \\
      \hline
-          \emph{DBLP}           &  977,288      &  3,432,273   &   118   &  7.02  &  11.8 \\
+          DBLP           &  977,288      &  3,432,273   &   118   &  7.02  &  11.8 \\
      \hline
-          \emph{Tencent}        &  2,320,895    &  50,133,369  &   405   &  43.2  &  6.96 \\
+          Tencent        &  2,320,895    &  50,133,369  &   405   &  43.2  &  6.96 \\
      \hline
-          \emph{DBpedia}        &  8,099,955    &  71,527,515  &    95   &  17.7  &  15.0 \\
+          DBpedia        &  8,099,955    &  71,527,515  &    95   &  17.7  &  15.0 \\
      \hline
-          \emph{DFlickr}        &  2,585,569    &  45,676,553  &   600   &  17.6  &  --- \\
+          DFlickr        &  2,585,569    &  45,676,553  &   600   &  17.6  &  --- \\
      \hline
-          \emph{Youtube}        &  1,881,147    &  9,142,046   &   55   &  4.9  &  --- \\
+          Youtube        &  1,881,147    &  9,142,046   &   55   &  4.9  &  --- \\
      \hline
   \end{tabular}
 \end{table}
