--- a/VLDBJ/conclude.tex
+++ b/VLDBJ/conclude.tex
@@ -2,7 +2,8 @@
 \label{conclusion}
 
 An AC is a community that exhibits structure and keyword cohesiveness. To facilitate ACQ evaluation, we develop the CL-tree index and its query algorithms. We further propose index maintenance algorithms for dynamic graphs.
-Moreover, we formally define two typical variants of the ACQ problem and propose efficient query algorithms based on the CL-tree index.
+%Moreover, we formally define two typical variants of the ACQ problem and propose efficient query algorithms based on the CL-tree index.
+Moreover, we formally define ACQ-A and ACQ-M problems and propose efficient query algorithms based on the CL-tree index.
 Our experimental results on several dataseats show that ACs are easier to interpret than those of existing community detection/search methods, and they can be ``personalized''. In addition, our solutions are also faster than existing community search algorithms.
 
 In the future, we will study the use of other measures of structure cohesiveness (e.g., $k$-truss, $k$-clique) and keyword cohesiveness (e.g., Jaccard similarity and string edit distance) in the ACQ definition.
