--- a/VLDBJ/intro.tex
+++ b/VLDBJ/intro.tex
@@ -82,8 +82,8 @@ We observe the {\it anti-monotonicity} property, which states that given a set $
 Based on the CL-tree index, we have developed three different ACQ algorithms based on the CL-tree, and they are able to achieve a superior performance.
 Moreover, to maintain the CL-tree index for dynamic graphs in which the keywords and edges are inserted or deleted, we have develop efficient algorithms for maintaining the CL-tree without re-building it from scratch.
 
-In addition, we have proposed two typical variants of the ACQ problems. The first one is an approximation version of the ACQ query in which vertices of an AC do not need to exactly share the same keywords in $S$;
-the second one considers multiple query vertices and outputs their ACs.
+In addition, we have proposed two typical variants of the ACQ problems which are called {\it Approximate ACQ problem} (or ACQ-A) and {\it Multiple-query problem} (or ACQ-M) respectively. ACQ-A is an approximation version of the ACQ query in which vertices of an AC do not need to exactly share the same keywords in $S$;
+ACQ-M considers multiple query vertices and outputs their ACs.
 To answer the queries for these variants, we have also developed efficient algorithms based on the CL-tree index.
 }
 
