--- a/VLDBJ/setup.tex
+++ b/VLDBJ/setup.tex
@@ -9,7 +9,7 @@ In the {\it Tencent} graph provided by the KDD contest 2012~\footnote{\url{http:
 Table~\ref{tab:dataset} shows the number of vertices and edges, the $k_{max}$ value, a vertex's average degree $\widehat d$, and its keyword set size $\widehat l$.
 
 {\color{blue}
-The remaining two datasets,
+The remaining two dynamic datasets,
 i.e., {\it DFlickr} and {\it Youtube}~\cite{mislove-2009-socialnetworksthesis,mislove-2008-flickr}),
 are dynamic evolving graphs, which contain the snapshots of graphs as the time goes on.
 Note that these two datasets do not have keywords.
