--- a/VLDBJ/algoOfVariant.tex
+++ b/VLDBJ/algoOfVariant.tex
@@ -2,7 +2,7 @@
 \label{app:algoOfVariant}
 
 {\color{blue}
-\textbf{1. Variant 1.}
+\textbf{1. ACQ-A.}
 We present {\tt basic-g-v1} and {\tt basic-w-v1} in Algorithms~\ref{alg:basic-g-v1} and~\ref{alg:basic-w-v1} respectively.
 
 \begin{algorithm}[h]
@@ -36,7 +36,7 @@ We present {\tt basic-g-v1} and {\tt basic-w-v1} in Algorithms~\ref{alg:basic-g-
 \end{algorithmic}}
 \end{algorithm}
 
-\textbf{2. Variant 2.}
+\textbf{2. ACQ-M.}
 Algorithms {\tt basic-g-v2}, {\tt basic-w-v2} are extended from {\tt basic-g} and {\tt basic-w}.
 Detailed pseudocodes are attached in Algorithms~\ref{alg:basic-g-v2} and~\ref{alg:basic-w-v2} respectively.
 
